updated intro section to center prefectly using css trick to prevent page jump on load

--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,6 @@ span.typed-cursor {
     font-size: 4.4rem;
     color: #fff;
     animation: blink-animation 1s steps(3, start) infinite;
-    -webkit-animation: blink-animation 1s steps(3, start) infinite;
 }
 
 @keyframes blink-animation {
@@ -87,10 +86,13 @@ span.typed-cursor {
 }
 
 .header {
+	height: 100vh;
+	min-height: 100%;
     width: 100%;
     z-index: 9;
     margin-top: -4rem;
     background: url("../img/bg.png");
+    background-color: #000;
 }
 
 .guld{    
@@ -132,6 +134,10 @@ span.typed-cursor {
 }
 
 .header #welcome {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);	
     text-align: center;
 }
 
@@ -161,7 +167,6 @@ span.typed-cursor {
     top: 0;
     position: relative;
     animation: social-show 1s;
-    -webkit-animation: social-show 1s;
 }
 
 #social a:hover,
@@ -211,25 +216,9 @@ span.typed-cursor {
     position: relative;
     height: 8rem;
     width: 6rem;
-    -webkit-perspective: 479px;
-    -moz-perspective: 479px;
-    -ms-perspective: 479px;
-    -o-perspective: 479px;
     perspective: 479px;
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -ms-backface-visibility: hidden;
-    -o-backface-visibility: hidden;
     backface-visibility: hidden;
-    -webkit-transform: translateZ(0);
-    -moz-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    -o-transform: translateZ(0);
     transform: translateZ(0);
-    -webkit-transform: translate3d(0, 0, 0);
-    -moz-transform: translate3d(0, 0, 0);
-    -ms-transform: translate3d(0, 0, 0);
-    -o-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
 }
 
@@ -246,15 +235,7 @@ span.typed-cursor {
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
     top: 0;
     width: 100%;
-    -webkit-transform: translateZ(0);
-    -moz-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    -o-transform: translateZ(0);
     transform: translateZ(0);
-    -webkit-transform-style: flat;
-    -moz-transform-style: flat;
-    -ms-transform-style: flat;
-    -o-transform-style: flat;
     transform-style: flat;
 }
 
@@ -263,29 +244,17 @@ span.typed-cursor {
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 5px 5px 0 0;
     height: 50%;
-    -webkit-transform-origin: 50% 100%;
-    -moz-transform-origin: 50% 100%;
-    -ms-transform-origin: 50% 100%;
-    -o-transform-origin: 50% 100%;
     transform-origin: 50% 100%;
 }
 
 .seminar-countdown .count.bottom {
     background-image: linear-gradient(rgba(255, 255, 255, 0.1), transparent);
-    background-image: -webkit-linear-gradient(rgba(255, 255, 255, 0.1), transparent);
-    background-image: -moz-linear-gradient(rgba(255, 255, 255, 0.1), transparent);
-    background-image: -ms-linear-gradient(rgba(255, 255, 255, 0.1), transparent);
-    background-image: -o-linear-gradient(rgba(255, 255, 255, 0.1), transparent);
     border-top: 1px solid #000;
     border-bottom: 1px solid #000;
     border-radius: 0 0 5px 5px;
     line-height: 0;
     height: 50%;
     top: 50%;
-    -webkit-transform-origin: 50% 0;
-    -moz-transform-origin: 50% 0;
-    -ms-transform-origin: 50% 0;
-    -o-transform-origin: 50% 0;
     transform-origin: 50% 0;
 }
 
@@ -314,19 +283,11 @@ span.typed-cursor {
 /* Animation start */
 
 .seminar-countdown .count.curr.top {
-    -webkit-transform: rotateX(0deg);
-    -moz-transform: rotateX(0deg);
-    -ms-transform: rotateX(0deg);
-    -o-transform: rotateX(0deg);
     transform: rotateX(0deg);
     z-index: 3;
 }
 
 .seminar-countdown .count.next.bottom {
-    -webkit-transform: rotateX(90deg);
-    -moz-transform: rotateX(90deg);
-    -ms-transform: rotateX(90deg);
-    -o-transform: rotateX(90deg);
     transform: rotateX(90deg);
     z-index: 2;
 }
@@ -334,28 +295,12 @@ span.typed-cursor {
 /* Animation end */
 
 .seminar-countdown .flip .count.curr.top {
-    -webkit-transition: all 250ms ease-in-out;
-    -moz-transition: all 250ms ease-in-out;
-    -ms-transition: all 250ms ease-in-out;
-    -o-transition: all 250ms ease-in-out;
     transition: all 250ms ease-in-out;
-    -webkit-transform: rotateX(-90deg);
-    -moz-transform: rotateX(-90deg);
-    -ms-transform: rotateX(-90deg);
-    -o-transform: rotateX(-90deg);
     transform: rotateX(-90deg);
 }
 
 .seminar-countdown .flip .count.next.bottom {
-    -webkit-transition: all 250ms ease-in-out 250ms;
-    -moz-transition: all 250ms ease-in-out 250ms;
-    -ms-transition: all 250ms ease-in-out 250ms;
-    -o-transition: all 250ms ease-in-out 250ms;
     transition: all 250ms ease-in-out 250ms;
-    -webkit-transform: rotateX(0deg);
-    -moz-transform: rotateX(0deg);
-    -ms-transform: rotateX(0deg);
-    -o-transform: rotateX(0deg);
     transform: rotateX(0deg);
 }
 
@@ -519,8 +464,6 @@ section {
 
 #section-seminar .schedule ul li .mu-single-event {
     background-color: #fff;
-    -webkit-box-shadow: 0 0 16px 0 rgba(32, 32, 47, 0.16);
-    -moz-box-shadow: 0 0 16px 0 rgba(32, 32, 47, 0.16);
     box-shadow: 0 0 16px 0 rgba(32, 32, 47, 0.16);
     position: relative;
     top: 0;
@@ -935,6 +878,7 @@ section {
 }
 
 @media screen and (max-width: 28rem) {
+	.header .text{font-size: 2.5rem;}
     .badge {
         display: none !important;
     }
